# python-docs-ko

./: .gitignore  README.rst  TRANSLATORS  about.po  bugs.po  build.py  contents.po  copyright.po  glossary.po  license.po  requirements.txt  sphinx.po
.devcontainer/: devcontainer.json
.pdk/: .gitignore  guide.md  pyproject.toml
.pdk/pdk/: __init__.py  gleaner.py
c-api/: abstract.po  allocation.po  apiabiversion.po  arg.po  bool.po  buffer.po  bytearray.po  bytes.po  call.po  capsule.po  cell.po  code.po  codec.po  complex.po  concrete.po  contextvars.po  conversion.po  coro.po  datetime.po  descriptor.po  dict.po  exceptions.po  file.po  float.po  frame.po  function.po  gcsupport.po  gen.po  hash.po  import.po  index.po  init.po  init_config.po  intro.po  iter.po  iterator.po  list.po  long.po  mapping.po  marshal.po  (+28 more)
deprecations/: c-api-pending-removal-in-3.14.po  c-api-pending-removal-in-3.15.po  c-api-pending-removal-in-future.po  index.po  pending-removal-in-3.13.po  pending-removal-in-3.14.po  pending-removal-in-3.15.po  pending-removal-in-3.16.po  pending-removal-in-future.po
distributing/: index.po
distutils/: _setuptools_disclaimer.po  apiref.po  builtdist.po  commandref.po  configfile.po  examples.po  extending.po  index.po  introduction.po  packageindex.po  setupscript.po  sourcedist.po  uploading.po
extending/: building.po  embedding.po  extending.po  index.po  newtypes.po  newtypes_tutorial.po  windows.po
faq/: design.po  extending.po  general.po  gui.po  index.po  installed.po  library.po  programming.po  windows.po
howto/: annotations.po  (+26 more)
(+64 files in other folders)
