[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdk"
version = "0.1.0"
description = "python-docs-ko tools"
authors = [
    {name = "Paul Oh", email = "flowdas@gmail.com"},
]
dependencies = [
    "blurb==2.0.0",
    "fire==0.7.0",
    "python-docs-theme==2025.2",
    "sphinx==8.2.3",
    "sphinx-intl==2.3.1",
]
requires-python = ">=3.13"

[project.scripts]
pdk = "pdk:main"

[tool.setuptools]
packages = ["pdk"]
